--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 							<li><a href="AboutMe.html" style="color: #717981;">About Me</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter" style="color: #717981;"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f" style="color: #717981;"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram" style="color: #717981;"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-github" style="color: #717981;"><span class="label">GitHub</span></a></li>
-							<li><a href="#" class="icon brands fa-twitch" style="color: #717981;"><span class="label">Twitch</span></a></li>
-							<li><a href="#" class="icon brands fa-linkedin" style="color: #717981;"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://twitter.com/DavidMKehl" class="icon brands fa-twitter" style="color: #717981;"><span class="label">Twitter</span></a></li>
+							<li><a href="https://www.facebook.com/DavidMichaelKehl/" class="icon brands fa-facebook-f" style="color: #717981;"><span class="label">Facebook</span></a></li>
+							<li><a href="https://www.instagram.com/davidmichaelkehl/" class="icon brands fa-instagram" style="color: #717981;"><span class="label">Instagram</span></a></li>
+							<li><a href="https://github.com/davidmkehl" class="icon brands fa-github" style="color: #717981;"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.twitch.tv/davidmichaelkehl" class="icon brands fa-twitch" style="color: #717981;"><span class="label">Twitch</span></a></li>
+							<li><a href="https://www.linkedin.com/in/davidmichaelkehl/" class="icon brands fa-linkedin" style="color: #717981;"><span class="label">LinkedIn</span></a></li>
 						</ul>
 					</nav>
 
@@ -194,12 +194,12 @@
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon brands fa-twitch"><span class="label">Twitch</span></a></li>
-									<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://twitter.com/DavidMKehl" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="https://www.facebook.com/DavidMichaelKehl/" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+									<li><a href="https://www.instagram.com/davidmichaelkehl/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://github.com/davidmkehl" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.twitch.tv/davidmichaelkehl" class="icon brands fa-twitch"><span class="label">Twitch</span></a></li>
+									<li><a href="https://www.linkedin.com/in/davidmichaelkehl/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 		
 								</ul>
 							</section>
