--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
 						<section>
 							<form method="post" action="#">
 								<div class="fields">
+									<h2> Contact Me</h2>
 									<div class="field">
 										<label for="name">Name</label>
 										<input type="text" name="name" id="name" />
@@ -207,7 +208,10 @@
 					</footer>
 
 				<!-- Copyright -->
-					<div id="copyright">
+					<div id="visitCounter">
+						<!-- Start of WebFreeCounter Code -->
+<a href="https://www.webfreecounter.com/" target="_blank"><img src="https://www.webfreecounter.com/hit.php?id=gmuekcxpa&nd=6&style=5" border="0" alt="web counter"></a>
+<!-- End of WebFreeCounter Code -->
 					</div>
 
 			</div>
