--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 				<!-- Copyright -->
 					<div id="visitCounter">
 						<!-- Start of WebFreeCounter Code -->
-<a href="https://www.webfreecounter.com/" target="_blank"><img src="https://www.webfreecounter.com/hit.php?id=gmuekcxpa&nd=6&style=5" border="0" alt="web counter"></a>
+<a href="https://www.webfreecounter.com/" target="_blank"><img src="https://www.webfreecounter.com/hit.php?id=gvkcxqx&nd=6&style=5" border="0" alt="free counter"></a>
 <!-- End of WebFreeCounter Code -->
 					</div>
 
