--- a/index.html
+++ b/index.html
@@ -208,10 +208,8 @@
 					</footer>
 
 				<!-- Copyright -->
-					<div id="visitCounter">
-						<!-- Start of WebFreeCounter Code -->
-<a href="https://www.webfreecounter.com/" target="_blank"><img src="https://www.webfreecounter.com/hit.php?id=gvkcxqx&nd=6&style=5" border="0" alt="free counter"></a>
-<!-- End of WebFreeCounter Code -->
+					<div id="Copyright">
+						<h1></h1>
 					</div>
 
 			</div>
